Fix FRONTEND_URL formatting in .env file

--- a/.env
+++ b/.env
@@ -7,7 +7,8 @@ JWT_SECRET=123423
 
 # URL of your DEPLOYED frontend (e.g., your GitHub Pages URL)
 # This is needed to create the QR code link.
-FRONTEND_URL=[https://adi-tya16.github.io/medbloc-ipfs]
+FRONTEND_URL=https://adi-tya16.github.io/medbloc-ipfs
+
 #(https://adi-tya16.github.io/medbloc-ipfs/)
 
 
