--- a/.env
+++ b/.env
@@ -8,6 +8,8 @@ JWT_SECRET=123423
 # URL of your DEPLOYED frontend (e.g., your GitHub Pages URL)
 # This is needed to create the QR code link.
 FRONTEND_URL=https://adi-tya16.github.io/medbloc-ipfs
+CORS_ORIGIN=https://adi-tya16.github.io
+
 #(https://adi-tya16.github.io/medbloc-ipfs)
 
 
